Added a little CSS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="utf-8" lang="en">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <p>pepep</p>
-        <a href="Recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
+        <ul>
+            <li><a href="Recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+        </ul>
     </body>
 </html>
