--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" lang="en">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
@@ -16,7 +17,7 @@
             <li>Item 5</li>
         </ul>
         <h2>Procedure</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
+        <p class="proce">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
             Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
             Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
             Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, 
